--- a/package.json
+++ b/package.json
@@ -60,5 +60,13 @@
   },
   "browserslist": [
     "extends @wordpress/browserslist-config"
-  ]
+  ],
+  "directories": {
+    "lib": "lib",
+    "test": "tests"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/reynotekoppele/reyno-utils.git"
+  }
 }
