--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,5 +18,6 @@ jobs:
           node-version: 18.x
           cache: "pnpm"
 
+      - run: pnpm i -g pnpm
       - run: pnpm install --frozen-lockfile
       - run: pnpm run lint && pnpm run build
