--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,3 +21,4 @@ jobs:
       - run: pnpm i -g pnpm
       - run: pnpm install --frozen-lockfile
       - run: pnpm run lint && pnpm run build
+      - run: pnpm run test
